# ant-farm

./: .coveragerc  .env.example  .env.production  .gitignore  AGENTS.md  AUTHENTICATION_FIX_SUMMARY.md  CLAUDE.md  CLI_AUTH_FIX_SUMMARY.md  CURRENT_SYSTEM_STATUS.md  DOCUMENTATION_CONSOLIDATION_REPORT.md  ENHANCED_COMMUNICATION_SUMMARY.md  Makefile  PHASE_1_IMPLEMENTATION_PLAN.md  PRIORITY_TASKS.md  QUICKSTART.md  README.md  SYSTEM_EVALUATION_REPORT.md  SYSTEM_READINESS_ASSESSMENT.md  TECHNICAL_DEBT.md  TECHNICAL_DEBT_CONSOLIDATED.md  adw_validation_report.json  agent:runner.py  alembic.ini  autonomous_bootstrap.py  batch_tasks_example.json  bootstrap.py  bootstrap:init_agent.py  bootstrap_plan.py  bootstrap_system.py  check_queue.py  cli_audit_report.json  cli_auditor.py  debug_agent.py  demo_hive_cli.py  demo_multi_agent_collaboration.py  demo_self_improvement.py  docker-compose.production.yaml  docker-compose.yaml  dump.rdb  echo_task_summary.md  (+33 more)
.github/workflows/: ci-cd.yml  ci-fast.yml  ci-nightly.yml  performance.yml  security.yml
alembic/: env.py
alembic/versions/: 7b71b9a0ac9e_add_pgvector_support_and_vector_columns.py  add_performance_indexes.py  f22d3a00238f_add_short_id_fields_to_models.py  optimize_database_indexes.py
docker/: Dockerfile.agent  Dockerfile.api  Dockerfile.production
docker/nginx/: default.conf  nginx.conf
docs/: ADW_IMPLEMENTATION_SUMMARY.md  API.md  BACKLOG.md  DEPLOYMENT.md  DEPRECATION_CANDIDATES.md  INDEX.md  PLAN.md  PROMPT.md  QUICKSTART.md  README.md  SYSTEM_HANDBOOK.md  full_index.json  index.json
leanvibe-hive/: .env.example  Makefile  README.md  docker-compose.yml  pyproject.toml
leanvibe-hive/bootstrap/: init_agent.py  template_methods.py
leanvibe-hive/docker/: Dockerfile.api
leanvibe-hive/scripts/: init.sql
plans/: epic5_runner.yaml  epic6_9.yaml  sample_epic.yaml
scripts/: analyze_query_performance.py  benchmark_performance.py  cleanup_obsolete_files.sh  init.sql  populate_context.py  security_audit.py
scripts/deployment/: deploy-production.sh
src/agents/: agent_factory.py  architect_agent.py  base_agent.py  developer_agent.py  devops_agent.py  meta_agent.py  qa_agent.py  runner.py
src/api/: error_handlers.py  main.py  main.py.bak  middleware.py
src/cli/: __init__.py  auth.py  coordination.py  main.py  main_old.py  plan_runner.py  plan_schema.py  utils.py
src/core/: advanced_context_engine.py  agent_coordination.py  analytics.py  async_db.py  auth.py  caching.py  cli_git_integration.py  communication_monitor.py  communication_performance_dashboard.py  config.py  constants.py  context_engine.py  contracts.py  db_setup.py  enhanced_message_broker.py  enhanced_performance_optimizer.py  enhanced_routing.py  enums.py  load_balancer.py  message_broker.py  models.py  orchestrator.py  performance_optimizer.py  persistent_cli.py  (+13 more)
tests/: conftest.py  pytest_config.py  test_infrastructure.py
(+114 files in other folders)
